namaste-app/src/App.css
html,
body {
  min-width: 700px;
  background-color: #f8f2e9;
  font-family: "Montserrat";
}
.page {
  background-color: #f8f2e9;
  padding: 20px;
}

#body_region {
  float: left;
  width: 50%;
  margin-top: 50px;
  padding-left: 150px;
}

#video_duration {
  margin-top: 50px;
  width: 50%;
  float: right;
  padding-right: 150px;
  margin-bottom: 40px;
}

#videoTextMetadata {
  margin-top: 10px;
  float: left;
  width: 90%;
}

#videoImgMetadata {
  float: right;
  width: 10%;
}

#heartImage {
  margin-top: 10px;
  text-align: center;
  width: 30px;
  height: 30px;
}

#randomizeButton {
  width: 134px;
  text-align: center;
  margin: 0 auto;
  margin-bottom: 30px;
}

.dropdownContainer {
  text-align: center;
  margin: 0 auto;
}

#settingsButton {
  width: 134px;
  text-align: center;
  margin: 0 auto;
}

#youtubeVideo {
  width: 560px;
  margin: 0 auto;
}

#defaultButton {
  background-color: #ffbe5b;
  border-radius: 8px;
  border: none;

  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;

  color: #545c52;
}

#videoTitle {
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  letter-spacing: 0.03em;
  text-transform: capitalize;
  color: #484848;
}

#channelTitle {
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  letter-spacing: 0.03em;
  text-transform: capitalize;
  color: #484848;
  opacity: 50%;
}

.tab-content {
  width: 100%;
}

.navItem {
  margin-left: 50px;
  margin-right: 50px;
}

.bottomBar {
  width: 67.99px;
  height: 5.77px;

  margin-left: 16px;
  background: #ffbe5b;
}

#tabRow {
  margin-bottom: 50px;
}

